--- a/lab2-1.html
+++ b/lab2-1.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-table {
-  width: 450px;
-  border-collapse: collapse;
-}
+  <head>
+    <title>Lab2-1</title>
 
-td {
-  border-width: 6px 3px;
-  border-style: solid;
-  border-color: rgb(50, 50, 50);
-  padding: 15px;
-  width: 30px;
-  height: 30px;
-}
+    <style>
+    table {
+      width: 450px;
+      border-collapse: collapse;
+    }
 
-.red-cell {
-  background-color: rgb(204, 0, 0);
-}
+    td {
+      border-width: 6px 3px;
+      border-style: solid;
+      border-color: rgb(50, 50, 50);
+      padding: 15px;
+      width: 30px;
+      height: 30px;
+    }
 
-.green-cell {
-  background-color: rgb(46 , 138, 87);
-}
+    .red-cell {
+      background-color: rgb(204, 0, 0);
+    }
 
-.blue-cell {
-  background-color: rgb(70, 130, 180);
-}
+    .green-cell {
+      background-color: rgb(46 , 138, 87);
+    }
 
-.yellow-cell {
-  background-color: rgb(218, 165, 33);
-}
-</style>
-</head>
-<body>
+    .blue-cell {
+      background-color: rgb(70, 130, 180);
+    }
 
-<table>
-  <tr>
-    <td class="yellow-cell"></td>
-    <td class="blue-cell"></td> 
-    <td class="red-cell" colspan="2"></td>
-    <td class="green-cell"></td> 
-    <td class="yellow-cell" colspan="2"></td>
-  </tr>
-  <tr>
-    <td class="yellow-cell" colspan="2"></td>
-    <td class="blue-cell"></td> 
-    <td class="green-cell"></td>
-    <td class="red-cell"></td>
-    <td class="green-cell" colspan="2"></td>
-  </tr>
-  <tr>
-    <td class="yellow-cell"></td>
-    <td class="green-cell"></td> 
-    <td class="red-cell"></td>
-    <td class="green-cell" colspan="2"></td>
-    <td class="blue-cell"></td> 
-    <td class="green-cell"></td>
-  </tr>
-</table>
-
-</body>
+    .yellow-cell {
+      background-color: rgb(218, 165, 33);
+    }
+    </style>
+  </head>
+  
+  <body>
+    <table>
+      <tr>
+        <td class="yellow-cell"></td>
+        <td class="blue-cell"></td> 
+        <td class="red-cell" colspan="2"></td>
+        <td class="green-cell"></td> 
+        <td class="yellow-cell" colspan="2"></td>
+      </tr>
+      <tr>
+        <td class="yellow-cell" colspan="2"></td>
+        <td class="blue-cell"></td> 
+        <td class="green-cell"></td>
+        <td class="red-cell"></td>
+        <td class="green-cell" colspan="2"></td>
+      </tr>
+      <tr>
+        <td class="yellow-cell"></td>
+        <td class="green-cell"></td> 
+        <td class="red-cell"></td>
+        <td class="green-cell" colspan="2"></td>
+        <td class="blue-cell"></td> 
+        <td class="green-cell"></td>
+      </tr>
+    </table>
+  </body>
 </html>
