--- a/Άσκηση 3/index.html
+++ b/Άσκηση 3/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Μινεστρόνε με πράσινα λαχανικά</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -14,8 +15,8 @@
       <h2>Μινεστρόνε με πράσινα λαχανικά</h2>
     </header>
     <!-- Διαχωριστικό -->
-     <div class="separator">
-      <!-- <hr> -->
+    <div class="separator">
+      <hr>
     </div> 
     <!-- Κεντρικό τμήμα -->
     <article>
